# chess-randomizer

./: Cargo.toml  Makefile.toml  README.md  index.css  index.html
openings/: x0000  x0001  x0002  x0003  x0004  x0005  x0006  x0007  x0008  x0009  x0010  x0011  x0012  x0013  x0014  x0015  x0016  x0017  x0018  x0019  x0020  x0021  x0022  x0023  x0024  x0025  x0026  x0027  x0028  x0029  x0030  x0031  x0032  x0033  x0034  x0035  x0036  x0037  x0038  x0039  (+1174 more)
pkg/: README.md  package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
src/: lib.rs
