[package]
version = "0.1.0"
name = "chess-randomizer"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
reformation = "0.5"
rand = {version = "0.7", features = ["wasm-bindgen"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
